Fix payment concept height to avoid ugly jump on show edit button

--- a/application/public/css/home/index.css
+++ b/application/public/css/home/index.css
@@ -69,7 +69,7 @@
 
 .payment_concept{
   float: left;
-  line-height: 24px;
+  line-height: 28px;
   width: 150px;
 }
 
